--- a/_data/footer.yml
+++ b/_data/footer.yml
@@ -4,6 +4,6 @@ links:
 - name: Devotional
   link: /devotional/
 - name: Class Notes
-  link: /notes/
+  link: /notes.html
 - name: About
   link: /about/
