--- a/_config.yml
+++ b/_config.yml
@@ -22,11 +22,8 @@ title: Esteeb.com
 email: steve@esteeb.com
 description: >- # this means to ignore newlines until "baseurl:"
   Information for my Sunday School class, and friends of the church.
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "ElEsteeb.github.io" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: EsteebTorres
-github_username:  ElEsteeb
-
+baseurl: ""
+url: "ElEsteeb.github.io"
 collections:
   devotionals:
     output: true
