--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,8 @@ email: steve@esteeb.com
 description: >- # this means to ignore newlines until "baseurl:"
   Information for my Sunday School class, and friends of the church.
 baseurl: ""
-url: "https://elesteeb.github.io" # or just "elesteeb.github.io"
+url: "https://www.esteeb.com"  # Your custom domain
+
 # Google Analytics
 google_analytics: G-Y0QLNLWWLX
 collections:
