--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,8 @@
 title: Esteeb.com
-email: steve@esteeb.com
-description: >- # this means to ignore newlines until "baseurl:"
-  Information for my Sunday School class, and friends of the church.
-baseurl: ""
+description: Information for my Sunday School class, and friends of the church.
+permalink: /:categories/:year-:month-:day-:title
 url: "https://www.esteeb.com"  # Your custom domain
+baseurl: ""                    # Empty since your site is at the root of the domain
 
 # Google Analytics
 google_analytics: G-Y0QLNLWWLX
