--- a/.github/workflows/pages-build-deployment.yml
+++ b/.github/workflows/pages-build-deployment.yml
@@ -5,6 +5,10 @@ on:
     branches:
       - main
 
+permissions:
+  contents: read
+  id-token: write  # Add this line to give the GITHUB_TOKEN the required permission
+
 jobs:
   build:
     runs-on: ubuntu-latest
