--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -1,49 +1,40 @@
 name: Deploy Jekyll site to Pages
 
 on:
-  # Runs on pushes targeting the default branch
   push:
     branches: ["main"]
-
-  # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
-# Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
 permissions:
   contents: read
   pages: write
   id-token: write
 
-# Allow only one concurrent deployment, skipping runs queued between the run in-progress and latest queued.
 concurrency:
   group: "pages"
   cancel-in-progress: false
 
 jobs:
-  # Build job
   build:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v2  # Use the correct version
+        uses: actions/checkout@v2
       - name: Setup Ruby
-        uses: ruby/setup-ruby@v1  # Use the correct version
+        uses: ruby/setup-ruby@v1
         with:
-          ruby-version: '3.1'  # Not needed with a .ruby-version file
-          bundler-cache: true  # runs 'bundle install' and caches installed gems automatically
+          ruby-version: '3.1'
+          bundler-cache: true
       - name: Setup Pages
         id: pages
-        uses: actions/configure-pages@v1  # Use the correct version
+        uses: actions/configure-pages@v1
       - name: Build with Jekyll
-        # Outputs to the './_site' directory by default
         run: bundle exec jekyll build --baseurl "${{ steps.pages.outputs.base_path }}"
         env:
           JEKYLL_ENV: production
       - name: Upload artifact
-        # Automatically uploads an artifact from the './_site' directory by default
-        uses: actions/upload-pages-artifact@v1  # Use the correct version
+        uses: actions/upload-pages-artifact@v1  # Ensure correct version
 
-  # Deployment job
   deploy:
     environment:
       name: github-pages
@@ -53,4 +44,4 @@ jobs:
     steps:
       - name: Deploy to GitHub Pages
         id: deployment
-        uses: actions/deploy-pages@v1  # Use the correct version
+        uses: actions/deploy-pages@v1  # Ensure correct version
