--- a/.github/workflows/jekyll-build.yml
+++ b/.github/workflows/jekyll-build.yml
@@ -17,7 +17,7 @@ jobs:
       - name: Set up Ruby
         uses: ruby/setup-ruby@v1
         with:
-          ruby-version: '3.x' # You can specify a more precise Ruby version if needed (e.g., '3.2')
+          ruby-version: '3.3' # You can specify a more precise Ruby version if needed (e.g., '3.2')
           bundler-cache: true # Cache bundler dependencies for faster builds
 
       - name: Install dependencies
