--- a/.github/workflows/scheduled-build.yml
+++ b/.github/workflows/scheduled-build.yml
@@ -2,12 +2,9 @@ name: Scheduled Jekyll Rebuild
 
 on:
   schedule:
-    # Runs at 11:00 UTC, every day.
-    # This corresponds to 5:00 AM CST (UTC-6).
-    # Learn more about cron schedules here: https://crontab.guru/
+    # Runs at 11:00 UTC, every day. (5:00 AM CST)
     - cron: '0 11 * * *'
 
-  # This allows you to manually trigger the workflow from the GitHub Actions tab in your repository
   workflow_dispatch:
 
 jobs:
@@ -17,24 +14,21 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v4
       with:
-        # This token is required to allow the action to commit changes back to your repository.
         token: ${{ secrets.GITHUB_TOKEN }}
 
     - name: Set up Ruby
       uses: ruby/setup-ruby@v1
       with:
-        ruby-version: '3.x' # IMPORTANT: Use the Ruby version specified in your Gemfile or that GitHub Pages uses (usually 3.x)
-        bundler-cache: true # Installs gems from Gemfile.lock
+        ruby-version: '3.2.8' # <--- CHANGED THIS LINE to a specific version
+        bundler-cache: true
 
-    - name: Build Jekyll site # <-- This is your problem line (approx 29 in your file)
-      run: bundle exec jekyll build --future false # <-- This needs to be indented and on its own line
+    - name: Build Jekyll site
+      run: bundle exec jekyll build --future false
 
     - name: Commit and push changes
       run: |
         git config user.name "GitHub Actions Bot"
         git config user.email "github-actions[bot]@users.noreply.github.com"
-        git add -A . # Stage all changes (including the rebuilt _site directory)
+        git add -A .
         git commit -m "Scheduled build: Triggered by cron" || echo "No changes to commit"
         git push
-      # The `|| echo "No changes to commit"` prevents the step from failing
-      # if there are no new posts or other changes to commit, which is fine.
