--- a/.github/workflows/scheduled-build.yml
+++ b/.github/workflows/scheduled-build.yml
@@ -7,6 +7,9 @@ on:
 
   workflow_dispatch:
 
+permissions:
+  contents: write # <--- ADD THIS BLOCK HERE
+
 jobs:
   build_and_deploy:
     runs-on: ubuntu-latest
@@ -19,7 +22,7 @@ jobs:
     - name: Set up Ruby
       uses: ruby/setup-ruby@v1
       with:
-        ruby-version: '3.2.8' # <--- CHANGED THIS LINE to a specific version
+        ruby-version: '3.2.8' # Use the specific version that works (e.g., '3.2.8')
         bundler-cache: true
 
     - name: Build Jekyll site
