--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -14,24 +14,29 @@ jobs:
   build_and_deploy:
     runs-on: ubuntu-latest
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
-      with:
-        token: ${{ secrets.GITHUB_TOKEN }}
+      - name: Checkout code
+        uses: actions/checkout@v4
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
 
-    - name: Set up Ruby
-      uses: ruby/setup-ruby@v1
-      with:
-        ruby-version: '3.2.8' # Use the specific version that works (e.g., '3.2.8')
-        bundler-cache: true
+      - name: Ensure vendor/bundle directory is writable # <--- ADD THIS NEW STEP
+        run: |
+          mkdir -p vendor/bundle
+          chmod -R 777 vendor/bundle # Grant full permissions for testing. We can refine this later if it works.
 
-    - name: Build Jekyll site
-      run: bundle exec jekyll build --future false
+      - name: Set up Ruby
+        uses: ruby/setup-ruby@v1
+        with:
+          ruby-version: '3.2.8' # Use the specific version that works (e.g., '3.2.8')
+          bundler-cache: true
 
-    - name: Commit and push changes
-      run: |
-        git config user.name "GitHub Actions Bot"
-        git config user.email "github-actions[bot]@users.noreply.github.com"
-        git add -A .
-        git commit -m "Scheduled build: Triggered by cron" || echo "No changes to commit"
-        git push
+      - name: Build Jekyll site
+        run: bundle exec jekyll build --future false
+
+      - name: Commit and push changes
+        run: |
+          git config user.name "GitHub Actions Bot"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
+          git add -A .
+          git commit -m "Scheduled build: Triggered by cron" || echo "No changes to commit"
+          git push
