--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -2,42 +2,23 @@ name: Scheduled Jekyll Rebuild
 
 on:
   schedule:
-    # Runs at 11:00 UTC, every day. (5:00 AM CST)
-    - cron: '0 11 * * *'
-
+    # Runs at 6:00 AM CST (12:00 UTC)
+    - cron: '0 12 * * *'
   workflow_dispatch:
 
 permissions:
   contents: write
 
 jobs:
-  build_and_deploy:
+  trigger_rebuild:
     runs-on: ubuntu-latest
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
-      with:
-        token: ${{ secrets.GITHUB_TOKEN }}
-    - name: Set up Ruby
-      uses: ruby/setup-ruby@v1
-      with:
-        ruby-version: '3.2.8'
-        bundler-cache: true
+      - name: Checkout code
+        uses: actions/checkout@v4
 
-    - name: Build Jekyll site
-      run: bundle exec jekyll build --future false
-
-    - name: Debug _site contents
-      run: |
-        echo "Listing contents of _site/devotionals/"
-        ls -F _site/devotionals/
-        echo "Listing contents of _site/devotionals/2025/06-June/"
-        ls -F _site/devotionals/2025/06-June/
-
-    - name: Commit and push changes
-      run: |
-        git config user.name "GitHub Actions Bot"
-        git config user.email "github-actions[bot]@users.noreply.github.com"
-        git add -A .
-        git commit -m "Scheduled build: Triggered by cron" || echo "No changes to commit"
-        git push
+      - name: Make empty commit
+        run: |
+          git config user.name "GitHub Actions Bot"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
+          git commit --allow-empty -m "Trigger rebuild for scheduled post"
+          git push
